# COMET-L

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  cleanup_database.py  config.example.yaml  config.server.example.yaml  justfile  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  test_tools_manual.py
.beads/: metadata.json
.github/: dependabot.yml
.github/workflows/: docker.yml
comet/: __init__.py  models.py  parallel_preprocessing.py
comet/agent/: __init__.py  parallel_planner.py  planner.py  state.py  target_selector.py  tools.py
comet/config/: __init__.py  policy.py  settings.py
comet/executor/: __init__.py  coverage_parser.py  (+6 more)
docker/: entrypoint.sh  java-env.sh  maven-settings.xml  self-check.sh
docs/: defects4j-replay.md  docker-server-deployment.md  production-multi-user-deployment.md
java-runtime/: pom.xml
tests/: test_defects4j_replay.py  test_execution_config.py  test_java_executor.py  test_knowledge_base.py  test_llm_client.py  test_main.py  test_main_defects4j_replay.py  test_method_signature_regressions.py  test_mutant_generator.py  test_parallel_planner.py  test_parallel_preprocessing.py  test_pit_xml_parser.py  test_planner.py  test_settings_paths.py  test_static_guard.py  test_study_analysis.py  test_study_metrics.py  test_study_runner.py  test_study_sampling.py  test_study_schema.py  test_target_selector.py  test_web_api.py  test_web_git_pr_service.py  test_web_log_router.py  test_web_repo_import_service.py  test_web_run_service.py  test_web_security.py
web/: index.html  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
(+101 files in other folders)
