[project]
name = "comet-l"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.0",
    "fastapi>=0.116.1",
    "httpx[socks]>=0.28.1",
    "javalang>=0.13.0",
    "jinja2>=3.1.6",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "tiktoken>=0.12.0",
]
