[project]
name = "comet-l"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=1.5.7",
  "fastapi>=0.136.0",
  "httpx[socks]>=0.28.1",
  "javalang>=0.13.0",
  "jinja2>=3.1.6",
  "openai>=2.21.0",
  "pydantic>=2.13.1",
  "pytest>=9.0.3",
  "python-multipart>=0.0.26",
  "pyyaml>=6.0.3",
  "tiktoken>=0.12.0",
  "uvicorn>=0.45.0",
]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "ruff>=0.15.11"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["state", "java-runtime/target", "logs", "sandbox", "web/dist"]

[tool.ruff.lint]
select = ["I"]

[tool.ruff.format]
docstring-code-format = true
